# Starstruck

./: Cargo.toml  flake.nix
examples/: winit.rs
src/: error.rs  helpers.rs  lib.rs  plugins.rs  prelude.rs  renderer.rs  shader.wgsl  vulkan_instance.rs
src/shapes/: mod.rs  vertex.rs
tests/: simple.rs
