[package]
name = "starstruck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.37.3"
starry-ecs = "0.1.2"
thiserror = "1.0.49"
vk-sys = "0.7.0"
winit = "0.28.7"

[dev-dependencies]
starry-ecs = "0.1.2"