[package]
name = "starstruck"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.14.0", features = ["bytemuck_derive", "derive", "zeroable_atomics"] }
starry-ecs = "0.5.0"
thiserror = "1.0.49"
tokio = { version = "1.33.0", features = ["full"] }
wgpu = "0.17.1"
winit = "0.28.7"

[dev-dependencies]
starry-ecs = "0.5.0"
tokio = { version = "1.33.0", features = ["full"] }
